2009-12-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad.c (exec_omp_post, exec_omp_get): New.

2009-12-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad.c (serve_post): New.

2009-12-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad.c (free_resources, check_is_dir): New.

2009-12-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad.c (gsad_connection_info, get_header_credentials,
	is_http_authenticated, file_reader, get_file_size): New.

2009-12-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad.c (print_header, send_response,
	send_http_authenticate_header, request_handler): Improve documentation.
	(request_handler): Use "const" where possible. Introduce
	oap_cgi_base. Improve redirect for non-base URLs. Redirect
	"/login/". Fix memleak.
	(gsad_init): Improve documentation. Call init_validator. 

2009-12-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad.c: Fixed some comments. Added list of includes.
	(DEFAULT_GSAD_PORT, DEFAULT_OPENVAS_ADMINISTRATOR_PORT,
	DEFAULT_OPENVAS_MANAGER_PORT, GCRY_THREAD_OPTION_PTHREAD_IMPL,
	gsad_daemon, validator, init_validator): New.
	(main): Use unified exit code. Improved comments.

2009-12-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad_oap.h: Fixed comment.

	* src/CMakeLists.txt: Reformatted.

2009-12-02  Michael Wiegand <michael.wiegand@intevation.de>

	* src/html/src/omp.xsl: Make 'Full and fast' accessible again as a scan
	config template.

2009-12-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* VERSION, CMakeLists.txt, src/html/src/about.htm4: Version set
	to 0.8.2.SVN.

2009-12-01  Michael Wiegand <michael.wiegand@intevation.de>

	Add support for new empty scan config template.

	* src/html/src/omp.xsl: Switch default to 'empty'.

	* src/gsad_omp.c (create_config_omp): Switch default to 'empty'.

2009-12-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
