@@ -1,3 +1,9 @@
+2009-12-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* src/gsad.c (REALM, POST_BUFFER_SIZE, FILE_NOT_FOUND,
+	ERROR_PAGE, SERVER_ERROR, content_type, content_disposition,
+	response_size, log_config, verbose): New.
+
 2009-12-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* src/gsad.c (exec_omp_post, exec_omp_get): New.
